# SSTImap

./: .gitignore  ENHANCEMENT_SUMMARY.md  README.md  config.json  pyproject.toml  requirements.txt  sstimap.py  test_jinja2_enhanced.py  test_security_validation.py
core/: bash.py  channel.py  checks.py  clis.py  data_type.py  interactive.py  matcher.py  plugin.py  tcpclient.py  tcpserver.py
data_types/: auto.py  form.py  fromfile.py  fromhex.py  json_data.py  text.py
data_types/auto/: auto.py
data_types/http/: form.py
data_types/object/: json_data.py  xml.py
data_types/raw/: fromhex.py
plugins/engines/: cheetah.py  dot.py  dust.py  ejs.py  erb.py  freemarker.py  jinja2.py  mako.py  marko.py  nunjucks.py  pug.py  slim.py  smarty.py  tornado.py  twig.py  twig_v1.py  velocity.py
plugins/generic/: eval_generic.py  java_el_generic.py  javascript_generic.py  php_generic.py  python_generic.py
plugins/java/: freemarker.py  ognl.py  spring_el.py  velocity.py
plugins/javascript/: dot.py  dust.py  ejs.py  marko.py  nunjucks.py  pug.py  velocity_js.py
plugins/languages/: bash.py  java.py  javascript.py  php.py  python.py  ruby.py  ssi.py
plugins/legacy_engines/: smarty_unsecure.py  twig_filter.py
plugins/php/: smarty.py  smarty_unsecure.py  twig.py  twig_cve.py  twig_filter.py  twig_v1.py
plugins/python/: cheetah.py  jinja2.py  jinja2_old.py  mako.py  templite.py  tornado.py
plugins/ruby/: erb.py  slim.py
utils/: cliparser.py  closures.py  config.py  crawler.py  loggers.py  rand.py  random_agent.py  strings.py
