[project]
name = "sstimap"
version = "1.3.1"
description = "Automatic SSTI detection tool with interactive interface "
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argparse (>=1.4.0,<1.5.0)",
    "requests (>=2.27.1,<2.28.0)",
    "urllib3 (>=1.26.9,<1.27.0)",
    "mechanize (>=0.4.8,<0.5.0)",
    "html5lib (>=1.1,<2.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sstimap = "sstimap:main"
